--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,26 +3,55 @@
 before:
   hooks:
     # You may remove this if you don't use go modules.
-    #- go mod download
+    - go get
     # you may remove this if you don't need go generate
     #- go generate ./...
 builds:
   - env:
       - CGO_ENABLED=0
+    ldflags:
+      - -X main.version={{.Version}}
     goos:
       - linux
-      - windows
       - darwin
+    goarch:
+      - amd64
+      - arm
+      - arm64
+    goarm:
+      - "6"
+      - "7"
+    # dir: src
+    id: lin
     hooks:
       post:
         - upx "{{ .Path }}"
+  - env:
+      - CGO_ENABLED=0
+    ldflags:
+      - -X main.version={{.Version}}
+    goos:
+      - windows
+    goarch:
+      - amd64
+      - arm
+      - arm64
+    goarm:
+      - "6"
+      - "7"
+    # dir: src
+    id: win
 archives:
-  - replacements:
+  - name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
+    replacements:
       darwin: Darwin
       linux: Linux
       windows: Windows
       386: i386
       amd64: x86_64
+    format_overrides:
+    - goos: windows
+      format: zip
 checksum:
   name_template: 'checksums.txt'
 snapshot:
