--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,15 @@
             "env": {},
             "args": [ "-b" ,":-5:" ,"-e" ,":-1:" ]
             // "args": [ "-b", "2022/01/07 20:50:00", "-e", "2022/01/08 00:30:00",   "-i", "5m", "-tmpl", "{{ .BeginTime.Format \"%YYYY/%MM/%DD %hh:%mm:%ss\" }} - {{ .EndTime.Format \"%YYYY/%MM/%DD %hh:%mm:%ss\" }} {{ .BeginTime.Unix }} {{ .EndTime.Unix }} --- {{ (MinusOneSecond .EndTime).Format \" %hh:%mm:%ss \" }}" ]
+        },
+        {
+            "name": "tmpl",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "main.go",
+            "env": {},
+            "args": [ "-b", "2022/01/07 20:50:00", "-e", "2022/01/08 00:30:00",   "-i", "5m", "-tmpl", "{{ .BeginTime.Format \"%YYYY/%MM/%DD %hh:%mm:%ss\" }} - {{ .EndTime.Format \"%YYYY/%MM/%DD %hh:%mm:%ss\" }} {{ .BeginTime.Unix }} {{ .EndTime.Unix }} --- {{ (MinusOneSecond .EndTime).Format \" %hh:%mm:%ss \" }}" ]
         }
     ]
 }
