taskfile: fix goreleaser parameter

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -20,11 +20,11 @@ tasks:
 
   snapshot:
     cmds:
-      - GITLAB_TOKEN="" goreleaser --rm-dist --snapshot
+      - GITLAB_TOKEN="" goreleaser --clean --snapshot
     
   release:
     cmds:
-      - GITLAB_TOKEN="" goreleaser --rm-dist
+      - GITLAB_TOKEN="" goreleaser --clean
 
   godoc:
     cmds:
