--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,8 @@ on:
       - master
     tags:
       - '!*' # Do not execute on tags
-    paths:
-      - calcdatelib/*
+    # paths:
+    #   - calcdatelib/*
 
 jobs:
   # test:
