--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,4 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
+version: 2
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -14,23 +13,6 @@ builds:
     goos:
       - linux
       - darwin
-    goarch:
-      - amd64
-      - arm
-      - arm64
-    goarm:
-      - "6"
-      - "7"
-    # dir: src
-    id: lin
-    hooks:
-      post:
-        - upx "{{ .Path }}"
-  - env:
-      - CGO_ENABLED=0
-    ldflags:
-      - -X main.version={{.Version}}
-    goos:
       - windows
     goarch:
       - amd64
@@ -40,20 +22,14 @@ builds:
       - "6"
       - "7"
     # dir: src
-    id: win
+
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
-    format: binary
+    formats: [ "binary" ]
+
 checksum:
   name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ .Tag }}"
+
 changelog:
   sort: asc
   filters:
@@ -63,10 +39,10 @@ changelog:
 
 brews:
   - homepage: 'https://github.com/sgaunet/homebrew-tools'
-    folder: Formula
+    directory: Formula
     commit_author:
       name: sgaunet
-      email: sgaunet@gmail.com
-    tap:
+      email: 1552102+sgaunet@users.noreply.github.com
+    repository:
       owner: sgaunet
       name: homebrew-tools
