--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -29,7 +29,7 @@ tasks:
   release:
     desc: "Create a release"
     cmds:
-      - GITLAB_TOKEN="" goreleaser --clean
+      - GITLAB_TOKEN="" goreleaser --clean --skip validate
 
   godoc:
     desc: "Run godoc server"
