feat: Add support for new expression syntax and enhance date formatting options
- Introduced new flags for expression handling: --expr, --each, --transform, and --format.
- Updated main function to process new expression syntax and handle iterations with optional transformations.
- Enhanced range processing to support pipeline operations and skip weekends.
- Improved output formatting based on user-defined formats or defaults.
- Added comprehensive tests for various expression scenarios, including date arithmetic, iterations, and edge cases.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -14,6 +14,19 @@ tasks:
     cmds:
       - go generate ./...
       - golangci-lint run
+  
+  coverage:
+    desc: "Generate coverage report"
+    cmds:
+      - go test -coverpkg=./... -coverprofile=profile.cov ./...
+      - |
+        if [ "$(uname)" = "Darwin" ]; then
+          sed -i '' '/cmd/d' profile.cov    # macOS version
+        else
+          sed -i '/cmd/d' profile.cov       # Linux version
+        fi
+      - go tool cover -func profile.cov | grep '^total:' | awk '{print $3}' | sed "s/%//"
+      - rm -f profile.cov
 
   tests:
     desc: "Run tests"
