--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -42,7 +42,7 @@ tasks:
   release:
     desc: "Create a release"
     cmds:
-      - GITLAB_TOKEN="" goreleaser --clean --skip validate
+      - GITLAB_TOKEN="" goreleaser --clean
 
   godoc:
     desc: "Go documentation of calcdate"
